# local-voice-pipeline

./: .env  .env.example  .gitignore  README.md  asr_runner.py  cli.py  config.py  llm_client.py  pyproject.toml  reference.txt  requirements.txt  server.py  tts_runner.py  vad.py
static/: index.html
