[project]
name = "local-voice-pipeline"
version = "0.1.0"
description = "Local ASR → LLM → OmniVoice TTS voice pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "faster-whisper",
    "omnivoice",
    "httpx",
    "sounddevice",
    "numpy",
    "soundfile",
    "torch",
    "torchaudio",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
